--- a/ivy.xml
+++ b/ivy.xml
@@ -16,7 +16,6 @@
 		<dependency org="c3p0" name="c3p0" rev="0.9.1" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-validator" rev="4.3.0.Final"/>
 		<dependency org="net.sf.ehcache" name="ehcache-core" rev="2.5.3"/>
-		
 
 		<!-- VRaptor dependencies -->
 		<dependency org="br.com.caelum" name="vraptor" rev="3.4.1" conf="default" />
@@ -30,6 +29,9 @@
 		<dependency org="commons-io" name="commons-io" rev="2.0.1"/>
 		<dependency org="com.google.guava" name="guava" rev="r09"/>
 
+		<!-- commendans dependencies -->
+		<dependency org="com.google.code.gson" name="gson" rev="2.2.2"/>
+		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
 		<dependency org="org.mockito" name="mockito-all" rev="1.8.5" conf="test->default" />
