--- a/build.properties
+++ b/build.properties
@@ -11,7 +11,7 @@ tmp.classes.dir=${tmp.webinf.dir}/classes
 tmp.test-classes.dir=${tmp.dir}/test-classes
 
 artifacts.dir=${tmp.root}/artifacts/
-war.file=recommender.war
+war.file=commendans.war
 
 src.dir=src/main/java
 libs.dir=${webapp.dir}/WEB-INF/lib
