--- a/ivy.xml
+++ b/ivy.xml
@@ -33,6 +33,10 @@
 
 		<!-- commendans dependencies -->
 		<dependency org="com.google.code.gson" name="gson" rev="2.2.2"/>
+		<dependency org="com.google.code.gson" name="gson" rev="2.2.2"/>
+		
+		<dependency org="org.eclipse.jetty" name="jetty-webapp" rev="7.4.4.v20110707"/>
+		<dependency org="org.mortbay.jetty" name="jsp-2.1-glassfish" rev="2.1.v20100127" />
 		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
