--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
+				<configuration>
+    					<webXml>src/main/webapp/WEB-INF/web-heroku.xml</webXml>        
+  				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
@@ -80,7 +83,7 @@
                             <extraJvmArguments>-Xmx512m</extraJvmArguments>
                             <programs>
                                 <program>
-                                    <mainClass>Main</mainClass>
+                                    <mainClass>br.ime.usp.commendans.runner.Runner</mainClass>
                                     <name>webapp</name>
                                 </program>
                             </programs>
@@ -201,6 +204,16 @@
 		  <groupId>org.hsqldb</groupId>
 		  <artifactId>hsqldb</artifactId>
 		  <version>2.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>7.4.4.v20110707</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jsp-2.1-glassfish</artifactId>
+			<version>2.1.v20100127</version>
 		</dependency>
 		<!-- Provided dependencies -->
 	</dependencies>
