--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,12 @@
 			<artifactId>jsp-2.1-glassfish</artifactId>
 			<version>2.1.v20100127</version>
 		</dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>
+            
 		<!-- Provided dependencies -->
 	</dependencies>
 
