--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 	
 	<context-param>
         <param-name>environment</param-name>
-        <param-value>heroku</param-value>
+        <param-value>dev</param-value>
     </context-param>
 
 </web-app>
