--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
                             <extraJvmArguments>-Xmx512m</extraJvmArguments>
                             <programs>
                                 <program>
-                                    <mainClass>br.ime.usp.commendans.runner.Runner</mainClass>
+                                    <mainClass>br.ime.usp.commendans.infra.JettyRunner</mainClass>
                                     <name>webapp</name>
                                 </program>
                             </programs>
