--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,18 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jstl-impl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el</artifactId>
+			<version>2.2.1-b03</version>
+		</dependency>
+		            
+		            
             
 		<!-- Provided dependencies -->
 	</dependencies>
