--- a/pom.xml
+++ b/pom.xml
@@ -212,11 +212,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jsp-2.1-glassfish</artifactId>
-			<version>2.1.v20100127</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>jsp-api-2.1</artifactId>
 			<version>7.0.0pre2</version>
 		</dependency>
@@ -226,6 +221,41 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
 		</dependency>
+		
+		<dependency>
+		   <groupId>javax.servlet</groupId>
+		   <artifactId>servlet-api</artifactId>
+		   <version>2.5</version>
+		   <scope>provided</scope>
+		</dependency>
+		
+<dependency>
+	<groupId>org.mortbay.jetty</groupId>
+	<artifactId>jsp-2.1-glassfish</artifactId>
+	<version>2.1.v20100127</version>
+</dependency>
+<dependency>
+   <groupId>javax.servlet</groupId>
+   <artifactId>servlet-api</artifactId>
+   <version>2.5</version>
+   <scope>provided</scope>
+</dependency>
+<dependency>
+   <groupId>javax.servlet.jsp</groupId>
+   <artifactId>jsp-api</artifactId>
+   <version>2.1</version>
+   <scope>compile</scope>
+</dependency>
+<dependency>
+   <groupId>javax.servlet</groupId>
+   <artifactId>jstl</artifactId>
+   <version>1.2</version>
+</dependency>
+<dependency>
+   <groupId>org.apache.tomcat</groupId>
+   <artifactId>jasper-el</artifactId>
+   <version>6.0.26</version>
+</dependency>
             
 		<!-- Provided dependencies -->
 	</dependencies>
